camionetas en usados

--- a/usados.html
+++ b/usados.html
@@ -476,107 +476,107 @@
 				<ol class="carousel-indicators">
    					<li data-target="#destacados-slider" data-slide-to="0" class="active"></li>
     				<li data-target="#destacados-slider" data-slide-to="1"></li>
-    				<li data-target="#destacados-slider" data-slide-to=""></li>
+    				<!-- <li data-target="#destacados-slider" data-slide-to=""></li> -->
   				</ol>
   				<!-- fin indicadores -->
 				<div class="carousel-item destacados-single active">
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/26.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										SSANGYONG
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ACTYON 856 
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 7.800.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/27.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										SSANGYONG
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ACTYON SPORT 4X4
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.890.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/28.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										CHEVROLET
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										COLORADO 3.7 Z71
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 7.980.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/29.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										VOLKSWAGEN
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										AMAROK 2.0 TDI CONFORTLINE
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 14.180.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/30.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										TOYOTA
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										HILUX AT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 17.990.000
 									</p>
 								</div>
 							</div>
@@ -588,100 +588,100 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/31.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										MITSUBISHI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										 L200 D/C DAKAR
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 17.980.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/32.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										SSANGYONG 
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ACTYON NEW ACTYON SPORT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 10.490.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/33.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										MITSUBISHI 
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										L200 D/C 2.4 KATANA CR
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 10.190.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/34.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										MITSUBISHI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										L200 D/C 2.4 KATANA CRT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 13.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/35.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										NISSAN
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NP300 SE 4X4 DC MEC
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 13.990.000
 									</p>
 								</div>
 							</div>
