--- a/usados.html
+++ b/usados.html
@@ -708,107 +708,107 @@
 				<ol class="carousel-indicators">
    					<li data-target="#destacados-slider" data-slide-to="0" class="active"></li>
     				<li data-target="#destacados-slider" data-slide-to="1"></li>
-    				<li data-target="#destacados-slider" data-slide-to=""></li>
+    				<!-- <li data-target="#destacados-slider" data-slide-to=""></li> -->
   				</ol>
   				<!-- fin indicadores -->
 				<div class="carousel-item destacados-single active">
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/36.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										TOYOTA
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										RAV 4 2.4 4X2 
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.280.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/37.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										MERCEDES-BENZ
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ML 250 BLUETEC
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 22.680.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/38.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Jeep
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										GRAND CHEROKEE
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 21.490.000						
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/39.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										VOLVO 
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										XC 60 T5 AWD R-DESIGN
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 21.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/40.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										HYUNDAI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										TUCSON GL
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 8.590.000
 									</p>
 								</div>
 							</div>
@@ -820,100 +820,100 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/41.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										HYUNDAI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										TUCSON GL
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 7.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/42.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										SPORTAGE 
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 17.690.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/43.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										SUZUKI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										GRAND NOMADE 
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 7.490.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/44.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										RENAULT
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										DUSTER EXPRESSION
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 6.490.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/45.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										AUDI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										Q3 1.4 TFSI SPORT AUT 
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 19.990.000
 									</p>
 								</div>
 							</div>
