inicio relleno sucursales

--- a/sucursales.html
+++ b/sucursales.html
@@ -83,7 +83,7 @@
 			<h1>HONDA</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img padre-hurtado"></div>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
@@ -103,21 +103,18 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img vitacura"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>Vitacura <br> Av. Vitacura 3506, Vitacura </b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
+							FONO 228404005
 							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
 						</p>
 					</div>
 				</div>
