--- a/sucursales.html
+++ b/sucursales.html
@@ -106,7 +106,7 @@
 					<div class="sucursal-card-img vitacura"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>Vitacura <br> Av. Vitacura 3506, Vitacura </b>
+							<b>VITACURA <br> Av. Vitacura 3506, Vitacura </b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
@@ -114,47 +114,48 @@
 							<b>VENTAS</b> <br>
 							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
 							FONO 228404005
-							<br><br>
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img providencia"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>MANUEL MONTT <br>
+								Manuel Montt 1283, Providencia
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404003
 							<br><br>
 							<b>SERVICIO TÉCNICO</b> <br>
 							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							FONO 228404471
 						</p>
 					</div>
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img irarrazabal"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>IRARRÁZABAL <br> 
+								Irarrázaval 370, Ñuñoa
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
-							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs
+							FONO 228404009
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
