--- a/sucursales.html
+++ b/sucursales.html
@@ -120,7 +120,7 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img providencia"></div>
+					<div class="sucursal-card-img manuel-montt"></div>
 					<div class="sucursal-card-title">
 						<h6>
 							<b>MANUEL MONTT <br>
@@ -168,61 +168,61 @@
 			<h1>Peugeot</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img p-irarrazabal"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>IRARRAZABAL <br>
+								Avenida Irarrázaval 390,Ñuñoa
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404550
 							<br><br>
 							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							De Lunes a Viernes de 08:30 a 18:30
+							FONO 228404039
 						</p>
 					</div>
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img mall-plaza-egana"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>MALL PLAZA EGAÑA <br>
+								Avenida Larraín 5862, La Reina
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
-							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404564
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img providencia"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>PROVIDENCIA <br> 
+								Francisco Bilbao 1415
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
-							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404408
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
