--- a/sucursales.html
+++ b/sucursales.html
@@ -235,21 +235,23 @@
 			<h1>JEEP - DODGE - FIAT - FORD</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img sk-bellavista"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>SK - BELLAVISTA <br>
+								Bellavista 0170, Providencia
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404000
 							<br><br>
 							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Viernes de 08:30 a 18:30 hrs.
+							FONO 228404021
 						</p>
 					</div>
 				</div>
