--- a/sucursales.html
+++ b/sucursales.html
@@ -257,10 +257,12 @@
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img ford-bellavista"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>FORD - BELLAVISTA <br>
+							   Bellavista 0170
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
