--- a/sucursales.html
+++ b/sucursales.html
@@ -287,61 +287,58 @@
 			<h1>USADOS</h1>
 			<div class="row">
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img usados-vitacura"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>VITACURA PREMIUM <br>
+							Avenida Vitacura # 7690</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
-							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404500
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
 
 				<div class="col-md-3 sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img usados-bilbao"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>FRANCISCO BILBAO <br>
+							   Avenida Francisco Bilbao #1275
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
-							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Viernes de 09:00 a 19:00 hrs. | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404467
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
 
 				<div class="col sucursal-card">
-					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-img autoshoping"></div>
 					<div class="sucursal-card-title">
 						<h6>
-							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+							<b>AUTOSHOPPING <br>
+							   Departamental 4500 
+							   (Lote 3 , Zona 4)
+							</b>
 						</h6>
 					</div>
 					<div class="sucursal-card-detail">
 						<p>
 							<b>VENTAS</b> <br>
-							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
-							FONO 228404004
-							<br><br>
-							<b>SERVICIO TÉCNICO</b> <br>
-							Lunes a Viernes de 09:00 a 18:30 hrs
-							FONO 228404050
+							Lunes a Domingo de 10:00 a 20:00 hrs.
+							FONO 228404456
+							<br><br><br><br><br>
 						</p>
 					</div>
 				</div>
