--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
 
 			<div class="col-md-4 visible-lg visible-md">
 
+				<div class="row">
+					<form class="search-container" action="//llamaswill.tumblr.com/search">
+						  <input id="search-box" type="text" class="search-box" name="q" />
+						  <label for="search-box"><span class="fas fa-search search-icon"></span></label>
+						  <input type="submit" id="search-submit" />
+					</form>
+				</div>
+
 				<div class="sistema-caja">
 					<div class="sistema-caja-gris">
 						<div class="titulos-sistema-caja">
@@ -143,7 +151,7 @@
 
 				                <div class="label_50 row">
 				                	<div class="col columna-sistema">
-				                		<textarea name="mensaje" id="mensaje" class="form-control" placeholder="Mensaje" rows="5" cols="30"></textarea>
+				                		<textarea name="mensaje" id="mensaje" class="form-control" placeholder="Mensaje" rows="2" cols="30"></textarea>
 				                	</div>
 				                	<div class="col columna-sistema">
 					                    <select name="sucursal" id="sucursal" class="form-control">
