buscador y modificacion slider

--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
 	<div class="container-fluid front-slider">
 		<div class="row">
 			<div class="col-md-8 p-0">
-				<img src="assets/images/vd.jpg" class="img-fluid">
+				<div class="imagen-slider">
+					
+				</div>
 			</div>
 
 			<div class="col-md-4 visible-lg visible-md">
-
-				<div class="row">
-					<form class="search-container" action="//llamaswill.tumblr.com/search">
-						  <input id="search-box" type="text" class="search-box" name="q" />
-						  <label for="search-box"><span class="fas fa-search search-icon"></span></label>
-						  <input type="submit" id="search-submit" />
-					</form>
-				</div>
-
 				<div class="sistema-caja">
 					<div class="sistema-caja-gris">
+					<div class="row buscador">
+						<form class="search-container" action="//llamaswill.tumblr.com/search">
+							  <input id="search-box" type="text" class="search-box" name="q" />
+							  <label for="search-box"><span class="fas fa-search search-icon"></span></label>
+							  <input type="submit" id="search-submit" />
+						</form>
+					</div>
 						<div class="titulos-sistema-caja">
 							<ul class="nav nav-tabs titulos-system">
 				        		<li class="active">
