--- a/usados.html
+++ b/usados.html
@@ -71,17 +71,25 @@
 	</div> -->
 <!-- FIN MENU -->
 
-<!-- FRONT SLIDER -->	
+	<!-- FRONT SLIDER -->	
 	<div class="container-fluid front-slider">
 		<div class="row">
 			<div class="col-md-8 p-0">
-				<img src="assets/images/vd.jpg" class="img-fluid">
+				<div class="imagen-slider">
+					
+				</div>
 			</div>
 
 			<div class="col-md-4 visible-lg visible-md">
-
 				<div class="sistema-caja">
 					<div class="sistema-caja-gris">
+					<div class="row buscador">
+						<form class="search-container" action="//llamaswill.tumblr.com/search">
+							  <input id="search-box" type="text" class="search-box" name="q" />
+							  <label for="search-box"><span class="fas fa-search search-icon"></span></label>
+							  <input type="submit" id="search-submit" />
+						</form>
+					</div>
 						<div class="titulos-sistema-caja">
 							<ul class="nav nav-tabs titulos-system">
 				        		<li class="active">
@@ -142,7 +150,7 @@
 
 				                <div class="label_50 row">
 				                	<div class="col columna-sistema">
-				                		<textarea name="mensaje" id="mensaje" class="form-control" placeholder="Mensaje" rows="5" cols="30"></textarea>
+				                		<textarea name="mensaje" id="mensaje" class="form-control" placeholder="Mensaje" rows="2" cols="30"></textarea>
 				                	</div>
 				                	<div class="col columna-sistema">
 					                    <select name="sucursal" id="sucursal" class="form-control">
@@ -226,9 +234,8 @@
 					</div>
 				</div>				
 			</div>
-		</div>
-	</div>
-<!-- FIN FRONT SLIDER -->
+		</div><!-- -- fin del row -->
+	<!-- FIN FRONT SLIDER -->
 
 <!-- DESTACADO -->
 	<div class="container-fluid destacados">
