--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse navbar-vd-principal" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
 				<li class="nav-item">
 					<a class="nav-link" href="nuevos.html">
