--- a/usados.html
+++ b/usados.html
@@ -12,14 +12,14 @@
 <body>
 	<!-- MENU -->
 	<nav class="navbar navbar-expand-lg navbar-light menu-principal">
-		<a class="navbar-brand" href="index.html">
+		<a class="navbar-brand link-logo" href="index.html">
 			<img class="logo" src="assets/images/logos/valenzuela_02.png" alt="Valenzuela & Delarze" class="img-fluid">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse navbar-vd-principal" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
 				<li class="nav-item">
 					<a class="nav-link" href="nuevos.html">
@@ -69,6 +69,7 @@
 			<a href=""><li>Contacto</li></a> 
 		</ul>
 	</div> -->
+	<!-- FIN MENU -->
 <!-- FIN MENU -->
 
 	<!-- FRONT SLIDER -->	
