--- a/index.html
+++ b/index.html
@@ -258,19 +258,19 @@
 
 				<div class="carousel-item marcas-single active">
 					<div class="row">
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/dodge.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/fiat.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/ford.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/honda.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/jeep.jpg" class="d-block w-100">
 						</div>
 					</div>
@@ -278,19 +278,19 @@
 
 				<div class="carousel-item marcas-single">
 					<div class="row">
-						<div class="col">
+						<div class="col-sm col-6 ">
 							<img src="assets/images/logos/kia.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/mitsubishi.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/peugeot.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/ram.jpg" class="d-block w-100">
 						</div>
-						<div class="col">
+						<div class="col-sm col-6">
 							<img src="assets/images/logos/ssangyoung.jpg" class="d-block w-100">
 						</div>
 					</div>
